Fixed some spelling mistakes and deleted feedback form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="page__header">
     <div class="page__header-wrap">
-      <a class="btn page__header-btn" href="#write-to-me">Hire me</a>
+      <a class="btn page__header-btn" href="https://www.linkedin.com/in/oleksandr-kushniruk" target="_blank">Hire me</a>
       <div class="page__header-links links">
         <a class="links__item" href="mailto:kushniruk_aleksandr@ukr.net">
           <svg class="links__item-img links__item-img--white" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 485.211 485.211">
@@ -43,13 +43,14 @@
         <img class="page__greeting-img" src="img/my-photo@1x.jpg" srcset="img/my-photo@2x.jpg 2x" width="140" height="140" alt="My photo">
       </picture>
       <h1 class="page__greeting-title">Oleksandr Kushniruk</h1>
-      <h2 class="page__greeting-specialization">Front-end Web-Developer</h2>
+      <h2 class="page__greeting-specialization">Front-end Developer</h2>
       <div class="page__greeting-description">
-        <span>#responsive</span><span>#cross-browser</span><span>#java-script</span>
-        <span>#dom</span><span>#bem</span><span>#ajax</span>
-        <span>#gulp</span><span>#bem</span><span>#flexible</span>
-        <a href="#write-to-me">#hire-me</a><span>#git</span><span>#preprocessor</span>
-        <span>#optimization</span>
+        <span>#responsive</span><span>#cross-browser</span><span>#javascript</span>
+        <span>#canvas</span><span>#bem</span><span>#ajax</span>
+        <span>#gulp</span><span>#git</span><span>#flexible</span>
+        <a href="https://www.linkedin.com/in/oleksandr-kushniruk" target="_blank">#hire-me</a><span>#less</span><span>#sass</span>
+        <span>#photoshop</span><span>#zeplin</span>
+        <span>#optimization</span><span>#accessibility</span>
       </div>
     </div>
   </section>
@@ -135,14 +136,6 @@
   </main>
   <footer class="page__footer">
     <div class="page__footer-wrap">
-      <form class="page__footer-feedback feedback" id="write-to-me" action="">
-        <fieldset class="feedback__group">
-          <input class="feedback__item" name="name" type="text" minlength="2" maxlength="30" pattern="^[a-zA-Z-А-Яа-яЁё\s\']+$" title="Please, enter your name" placeholder="Name" required>
-          <input class="feedback__item" name="email" type="email" title="Please, enter your email" placeholder="Email" required>
-        </fieldset>
-        <textarea class="feedback__item feedback__item-message" name="message" cols="30" rows="10" placeholder="Your message" required></textarea>
-        <button class="btn feedback-form__btn" type="submit">Send</button>
-      </form>
       <div class="page__footer-links links">
         <a class="links__item" href="mailto:kushniruk_aleksandr@ukr.net">
           <svg class="links__item-img links__item-img--white" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 485.211 485.211">
